[gd_scene load_steps=5 format=3 uid="uid://cu03e8j7o5g08"]

[ext_resource type="Script" path="res://battle.gd" id="1_3b4qf"]
[ext_resource type="Texture2D" uid="uid://ww7kngg642xj" path="res://assets/coba1.png" id="2_4yg4t"]
[ext_resource type="PackedScene" uid="uid://mnv2c51nyjh5" path="res://BattleUI.tscn" id="3_5fuxq"]
[ext_resource type="Texture2D" uid="uid://8dy180rdlwh5" path="res://assets/mr._possibillity_%5BPNG_SPRITE%5D.png" id="3_cjb7e"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3b4qf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="MarginContainer" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 25.0
offset_right = 66.0
offset_bottom = 65.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI"]
layout_mode = 2

[node name="PlayerHP" type="Label" parent="CanvasLayer/GUI/VBoxContainer"]
layout_mode = 2

[node name="EnemyHP" type="Label" parent="CanvasLayer/GUI/VBoxContainer"]
layout_mode = 2

[node name="Coba1" type="Sprite2D" parent="CanvasLayer/GUI/VBoxContainer"]
position = Vector2(551.5, 311.5)
scale = Vector2(0.28625, 0.219)
texture = ExtResource("2_4yg4t")

[node name="Mr_Possibillity_5bpngSprite_5d" type="Sprite2D" parent="CanvasLayer/GUI/VBoxContainer"]
position = Vector2(785, 332)
scale = Vector2(0.490333, 0.5175)
texture = ExtResource("3_cjb7e")

[node name="BattleUI" parent="." instance=ExtResource("3_5fuxq")]
offset_left = 948.0
offset_top = 354.0
offset_right = 998.0
offset_bottom = 431.0
